--- a/page04.html
+++ b/page04.html
@@ -280,7 +280,7 @@
             <li class="page-item"><a class="page-link" href="index.html">1</a></li>
             <li class="page-item"><a class="page-link" href="page02.html">2</a></li>
             <li class="page-item"><a class="page-link" href="page03.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            <li class="page-item"><a class="page-link" href="page05.html">Next</a></li>
          </ul>
         </nav>
         <div class="footer">Footnote</div>
