--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
       max-width: max-content;
       position: center;
       margin: 0 auto;
+      margin-top: 10px;
+      margin-bottom: 15px;
       display: block;
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
