--- a/page06.html
+++ b/page06.html
@@ -259,11 +259,8 @@
   </style>
     <body>
       <div class="content" role="main">
-      </div>
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2PkMRtZ717iuBTiFRbZUi0?utm_source=generator" 
-      width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-      loading="lazy"></iframe>
-      </div>
+        <div class="strokeme">
+        <p class="title">One Hundred and One Dalmatians</p>
      </div>
     </div>
 
@@ -271,7 +268,12 @@
           <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
           <p class="different"><strong>Roger:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
           <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-           <a href="page03.html" class="btn">Continue</a>
+           
+       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2tkIIkF3CPqsmYhsncNEGN?utm_source=generator" 
+      width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+      loading="lazy"></iframe>
+       
+       <a href="page03.html" class="btn">Continue</a>
             <a href="index.html" class="btn">Back</a>
    
         <nav aria-label="Page navigation example">
