--- a/page03.html
+++ b/page03.html
@@ -259,7 +259,9 @@
   </style>
     <body>
       <div class="content" role="main">
-     </div>
+        <div class="strokeme">
+        <p class="title">One Hundred and One Dalmatians</p>
+        </div>
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ulsjuiFO2J0?si=CB4ZV8GASG_E6wx8" title="YouTube video player" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" r
