--- a/page03.html
+++ b/page03.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
    <!-- 
-      This is my final project, and I tell a story from a film or tv show.
+      This is my final project, and I will tell a story from a film or TV show.
       The story I chose is One Hundred and One Dalmatians (1961), a classic Disney film. My project intends to highlight
-      certain aspects of the film, such as the characters, the story, and the animation style. I'll touch upon why generations
-      of people goes back to older Disney films instead of Disney's modern films after the 2010s.
+      certain aspects of the film, such as the characters, the story, and the animation style. I'll describe why generations
+      of people go back to older Disney films instead of Disney's modern films after the 2010s.
     -->
   <head>
     <meta charset="utf-8">
