--- a/page04.html
+++ b/page04.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
    <!-- 
-      This is my final project, and I tell a story from a film or tv show.
+      This is my final project, and I will tell a story from a film or TV show.
       The story I chose is One Hundred and One Dalmatians (1961), a classic Disney film. My project intends to highlight
-      certain aspects of the film, such as the characters, the story, and the animation style. I'll touch upon why generations
-      of people goes back to older Disney films instead of Disney's modern films after the 2010s.
+      certain aspects of the film, such as the characters, the story, and the animation style. I'll describe why generations
+      of people go back to older Disney films instead of Disney's modern films after the 2010s.
     -->
   <head>
     <meta charset="utf-8">
@@ -259,9 +259,10 @@
   </style>
     <body>
       <div class="content" role="main">
+        <div class="strokeme">
+        <p class="title">One Hundred and One Dalmatians</p>
      </div>
     </div>
-
           <p class="center-italic">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p> 
           <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
           <p class="different"><strong>Roger:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
