--- a/page05.html
+++ b/page05.html
@@ -259,8 +259,10 @@
   </style>
     <body>
       <div class="content" role="main">
-      </div>
-
+        <div class="strokeme">
+        <p class="title">One Hundred and One Dalmatians</p>
+     </div>
+    </div>
          <p class="center-italic">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p> 
           <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
           <p class="different"><strong>Roger:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
