--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
    <!-- 
-      This is my final project, and I will tell a story from a film or TV show.
+      This is my final project, and I will tell a story from a film or tv show.
       The story I chose is One Hundred and One Dalmatians (1961), a classic Disney film. My project intends to highlight
       certain aspects of the film, such as the characters, the story, and the animation style. I'll describe why generations
       of people go back to older Disney films instead of Disney's modern films after the 2010s.
@@ -9,7 +9,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Beauty of One Hundred and One Dalmatians and Classic Disney Films</title>
+    <title>Final-01</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -191,51 +191,6 @@
       justify-content: center;
       align-items: center;
       margin-top: 20px;
-    }
-    .pagination a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #000;
-      font-family: 'Newsreader', Arial, Helvetica, sans-serif;
-    }
-    .pagination a:hover {
-      text-decoration: underline;
-      color: #4186e1;
-    }
-    .pagination .active {
-      font-weight: bold;
-      color: #000;
-    }
-    .pagination .disabled {
-      color: #ccc;
-      pointer-events: none;
-    }
-    .pagination .disabled:hover {
-      text-decoration: none;
-      color: #ccc;
-    }
-    .pagination .page-item {
-      margin: 0 5px;
-    }
-    .pagination .page-link {
-      color: #000;
-      background-color: #fff;
-      border: 1px solid #000;
-      padding: 10px 15px;
-      border-radius: 5px;
-    }
-    .pagination .page-link:hover {
-      background-color: #000;
-      color: #fff;
-    }
-    .pagination .page-item.active .page-link {
-      background-color: #000;
-      color: #fff;
-    }
-    .pagination .page-item.disabled .page-link {
-      color: #ccc;
-      background-color: #fff;
-      border: 1px solid #ccc;
     }
   </style>
     <body>
