--- a/page02.html
+++ b/page02.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
    <!-- 
-      This is my final project, and I will tell a story from a film or TV show.
+      This is my final project, and I will tell a story from a film or tv show.
       The story I chose is One Hundred and One Dalmatians (1961), a classic Disney film. My project intends to highlight
       certain aspects of the film, such as the characters, the story, and the animation style. I'll describe why generations
       of people go back to older Disney films instead of Disney's modern films after the 2010s.
@@ -9,7 +9,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Final-02</title>
+    <title>The Beauty of One Hundred and One Dalmatians and Classic Disney Films</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,16 +71,26 @@
           font-family: 'Newsreader', Arial, Helvetica, sans-serif;
           text-align: center;
       }
-      textarea {
+      .text-box {
         color: #000000;
         font-size: 20px;
         font-family: 'Newsreader', Arial, Helvetica, sans-serif;
-        text-align:justify;
-        text-overflow: clip;
-        overflow: auto;
+        text-align: left;
+        text-indent: 2px;
+        line-height: 1.5;
+        word-wrap: break-word;
+        overflow-x: scroll;
+        overflow-y: scroll;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        border-width:1px;
+        padding-top: 10px;
+        padding-left:5px;
+        padding-bottom:10px;
+        box-sizing: border-box;
         resize: none;
         width: 100%;
-        max-width: 900px;
+        max-width: 800px;
         height: 200px;
         margin: 0 auto;
         margin-top: 20px;
@@ -89,24 +99,8 @@
         margin-right: auto;
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        background-color: #ffffff;
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
+        background-color: #e1eeeb;
       }
-      .footer{ 
-       position: relative;     
-       text-align: center;
-       text-box: center;
-       font-size: 20px;
-       font-family: 'Newsreader', Arial, Helvetica, sans-serif;
-       color: #ffffff;
-       padding: 10px;
-       left: 0px;
-       right: 0px;   
-       bottom: 0px; 
-       width: 100%;
-      }  
       .illustration {
        max-width: 40%;
        max-height: var(--image-max-width);
@@ -228,7 +222,7 @@
       }
       .pagination {
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 120px;
       }
       .pagination .page-item .page-link {
         color: #000;
@@ -244,27 +238,6 @@
         background-color: #000;
         color: #fff;
       }
-      .pagination .page-item.disabled .page-link {
-        color: #ccc;
-        background-color: #fff;
-        border: 1px solid #ccc;
-      }
-      .pagination .page-item.disabled .page-link:hover {
-        background-color: #fff;
-        color: #ccc;
-      }
-      .pagination .page-item.disabled .page-link:focus {
-        outline: none;
-        box-shadow: none;
-      }
-      .pagination .page-item.disabled .page-link:focus {
-        outline: none;
-        box-shadow: none;
-      }
-      .pagination .page-item.disabled .page-link:focus {
-        outline: none;
-        box-shadow: none;
-      }
   </style>
     <body>
       <div class="content" role="main">
@@ -276,15 +249,16 @@
         <img src="assets/img/dalmatians-piano.jpg" alt="Roger" class="illustration">
         <p class="center-italic">The bachelor life wasn't very glamorous for Pongo.</p>
       <p class="center-italic">He wanted his owner, Roger Radcliffe, to have someone special.</p>
-          
-        <textarea rows="10" cols="90" placeholder="Write something here..." style="margin-top: 20px; font-family: 'Newsreader', Arial, Helvetica, sans-serif; font-size: 20px; 
-        border-radius: 5px; border: 1px solid #ccc; padding: 10px;">
-          Pongo: It was plain to see that my old pet needed someone. But if it were left up to Roger, we'd be bachelors forever. He was married to his work.
-            Writing songs. Songs about romance, of all things, something he knew absolutely nothing about.
-            Oh, he's intelligent enough, as humans go. And I think you could say that Roger is a rather handsome animal in his way.
-            I could see no reason why my pet didn't deserve an attractive mate.
-        </textarea>
-       </div>
+
+        <div class="text-box">
+          <p><strong>Pongo:</strong> It was plain to see that my old pet needed someone. But if it were left up to Roger, we'd be 
+            bachelors forever. He was married to his work.</p>
+          <p>Writing songs.</p>
+          <p>Songs about romance, of all things, something he knew absolutely nothing about.</p>
+          <p>Oh, he's intelligent enough, as humans go. And I think you could say that Roger is a rather handsome animal in his way.
+            I could see no reason why my pet didn't deserve an attractive mate.</p>
+        </div>
+
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Cj70OfKouMCHBZTuGd9rL?utm_source=generator" 
       width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
       loading="lazy"></iframe> 
@@ -295,7 +269,6 @@
            <li class="page-item"><a class="page-link" href="page03.html">Next</a></li>
           </ul>
         </nav>
-    <div class="footer">Footnote</div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
