--- a/page03.html
+++ b/page03.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Final-03</title>
+    <title>The Beauty of One Hundred and One Dalmatians and Classic Disney Films</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,13 +71,27 @@
           font-family: 'Newsreader', Arial, Helvetica, sans-serif;
           text-align: center;
       }
-      textarea {
+      .text-box {
         color: #000000;
-        font-size: 16px;
+        font-size: 20px;
         font-family: 'Newsreader', Arial, Helvetica, sans-serif;
+        text-align: left;
+        text-indent: 2px;
+        line-height: 1.5;
+        word-wrap: break-word;
+        overflow-x: scroll;
+        overflow-y: scroll;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        border-width:1px;
+        padding-top: 10px;
+        padding-left:5px;
+        padding-bottom:10px;
+        box-sizing: border-box;
+        resize: none;
         width: 100%;
-        max-width: 600px;
-        height: 200px;
+        max-width: 900px;
+        height: 400px;
         margin: 0 auto;
         margin-top: 20px;
         margin-bottom: 20px;
@@ -86,23 +100,7 @@
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         background-color: #ffffff;
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
       }
-      .footer{ 
-       position: relative;     
-       text-align: center;
-       text-box: center;
-       font-size: 20px;
-       font-family: 'Newsreader', Arial, Helvetica, sans-serif;
-       color: #ffffff;
-       padding: 10px;
-       left: 0px;
-       right: 0px;   
-       bottom: 0px; 
-       width: 100%;
-      }  
       .illustration {
        max-width: 60%;
        max-height: var(--image-max-width);
@@ -157,21 +155,21 @@
 
       .right-align {
             text-align: right;
-        }
+      }
 
       .left-align {
             text-align: left;
-        }
+      }
 
-        .center-align {
+      .center-align {
             text-align: center;
-        }
-        .center-italic {
+      }
+      .center-italic {
             text-align: center;
             font-size: 20px;
             font-family: 'Newsreader', Arial, Helvetica, sans-serif;
             font-style: italic;
-        }
+      }
 
       .strokeme {
     color: #000000;
@@ -206,6 +204,8 @@
         max-width: max-content;
         position: center;
         margin: 0 auto;
+        margin-top: 10px;
+        margin-bottom: 15px;
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
@@ -214,12 +214,14 @@
         max-width: max-content;
         position: center;
         margin: 0 auto;
+        margin-top: 10px;
+        margin-bottom: 15px;
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       .pagination {
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 120px;
       }
       .pagination .page-item .page-link {
         color: #000;
@@ -235,48 +237,34 @@
         background-color: #000;
         color: #fff;
       }
-      .pagination .page-item.disabled .page-link {
-        color: #ccc;
-        background-color: #fff;
-        border: 1px solid #ccc;
-      }
-      .pagination .page-item.disabled .page-link:hover {
-        background-color: #fff;
-        color: #ccc;
-      }
-      .pagination .page-item.disabled .page-link:focus {
-        outline: none;
-        box-shadow: none;
-      }
-      .pagination .page-item.disabled .page-link:focus {
-        outline: none;
-        box-shadow: none;
-      }
-      .pagination .page-item.disabled .page-link:focus {
-        outline: none;
-        box-shadow: none;
-      }
   </style>
     <body>
-      <div class="content" role="main">
-        <div class="strokeme">
-        <p class="title">One Hundred and One Dalmatians</p>
-        </div>
-    </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ulsjuiFO2J0?si=CB4ZV8GASG_E6wx8" title="YouTube video player" 
-       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" r
-       eferrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <p class="center-italic">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p> 
-        <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <p class="different"><strong>Roger:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-      </div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Cj70OfKouMCHBZTuGd9rL?utm_source=generator" 
-         width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-          loading="lazy"></iframe> 
-      </div>
-       <a href="page03.html" class="btn">Continue</a>
-            <a href="index.html" class="btn">Back</a>
+        <div class="content" role="main">
+            <div class="strokeme">
+            <p class="title">One Hundred and One Dalmatians</p>
+            </div>
+     </div>
+          <iframe width="660" height="415" src="https://www.youtube.com/embed/ulsjuiFO2J0?si=CB4ZV8GASG_E6wx8" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" r
+              eferrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         <p class="center-italic">A scene of the women walking their dogs showcases smooth animation.</p> 
+          
+            <div class="text-box">In the opening scene, we are introduced to Pongo, a Dalmatian dog who lives in London with his owner, Roger. Pongo is bored and longs for a mate.
+              Soft piano music plays in the background as Pongo gazes out the window. The pacing is slow, allowing the audience to take in the sights and sounds of London.
+            <p>The animation is fluid, with Pongo's movements being graceful and elegant. The colors are bright and vibrant, capturing the essence of London.
+              The camera pans to show the streets of some women and their dogs walking. The animation captures their unique personalities and characteristics with how they carry themselves.
+              Pongo's expression changes from boredom to excitement as he spots a beautiful Dalmatian named Perdita across the street. 
+              The pacing quickens as Pongo tries to get Roger's attention, and the animation emphasizes the urgency of the moment, with Pongo barking and jumping around in anticipation.</p>
+            <p>The camera focuses on Roger putting on his coat and grabbing his hat. The animation highlights his meticulous movements as
+              he slips his arms into the sleeves and adjusts his hat.
+              It's a small detail, but it adds to the overall charm of the scene and makes the characters feel more human. A modern
+              Disney film wouldn't take the time to slow down like this.
+              The scene ends with Pongo finally getting Roger's attention, and rushing out the door to meet Anita and Perdita.</p>
+            </div>
+          
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Cj70OfKouMCHBZTuGd9rL?utm_source=generator" 
+          width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy"></iframe>
    
         <nav aria-label="Page navigation example">
           <ul class="pagination">
@@ -286,7 +274,6 @@
            <li class="page-item"><a class="page-link" href="page04.html">Next</a></li>
           </ul>
         </nav>
-        <div class="footer">Footnote</div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
