--- a/page04.html
+++ b/page04.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Final-04</title>
+    <title>The Beauty of One Hundred and One Dalmatians and Classic Disney Films</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,10 +71,24 @@
           font-family: 'Newsreader', Arial, Helvetica, sans-serif;
           text-align: center;
       }
-      textarea {
+      .text-box {
         color: #000000;
-        font-size: 16px;
+        font-size: 20px;
         font-family: 'Newsreader', Arial, Helvetica, sans-serif;
+        text-align: left;
+        text-indent: 2px;
+        line-height: 1.5;
+        word-wrap: break-word;
+        overflow-x: scroll;
+        overflow-y: scroll;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        border-width:1px;
+        padding-top: 10px;
+        padding-left:5px;
+        padding-bottom:10px;
+        box-sizing: border-box;
+        resize: none;
         width: 100%;
         max-width: 600px;
         height: 200px;
@@ -85,24 +99,8 @@
         margin-right: auto;
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        background-color: #ffffff;
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
+        background-color: #e1eeeb;
       }
-      .footer{ 
-       position: relative;     
-       text-align: center;
-       text-box: center;
-       font-size: 20px;
-       font-family: 'Newsreader', Arial, Helvetica, sans-serif;
-       color: #ffffff;
-       padding: 10px;
-       left: 0px;
-       right: 0px;   
-       bottom: 0px; 
-       width: 100%;
-      }  
       .illustration {
        max-width: 60%;
        max-height: var(--image-max-width);
@@ -206,6 +204,8 @@
         max-width: max-content;
         position: center;
         margin: 0 auto;
+        margin-top: 10px;
+        margin-bottom: 15px;
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
@@ -214,12 +214,14 @@
         max-width: max-content;
         position: center;
         margin: 0 auto;
+        margin-top: 10px;
+        margin-bottom: 15px;
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
       .pagination {
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 120px;
       }
       .pagination .page-item .page-link {
         color: #000;
@@ -263,18 +265,27 @@
         <p class="title">One Hundred and One Dalmatians</p>
      </div>
     </div>
-          <p class="center-italic">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p> 
-          <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <p class="different"><strong>Roger:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-           </div>
-             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2PkMRtZ717iuBTiFRbZUi0?utm_source=generator" 
-              width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-               loading="lazy"></iframe>
-           </div>
-       <a href="page03.html" class="btn">Continue</a>
-            <a href="index.html" class="btn">Back</a>
-   
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/g2T6lJaodlE?si=NcnuvEUnPz_wBQw0" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+          <p class="center-italic">Pongo and Roger meeet Anita and Perdita in this sweet scene.</p>
+          
+          <div class="text-box">
+            <p><strong>Roger:</strong> Pongo, boy, slow down.</p>
+            <p><strong>Pongo:</strong> I was afraid we'd missed them. Perhaps they passed on by the park. Then suddenly... I spotted them.</p>
+            <p>It was a perfect situation if I planned it right.</p>
+            <p> I couldn't depend on Roger. I knew what he'd do.</p>
+            <p>He'd settle on the grass, puff his pipe and that would be it.</p>
+            <p>No, it was all up to me.</p>
+            <p>Well. At first I had no particular plan, just anything to attract attention.</p>
+            <p>You know, stir things up a bit.</p>
+          </div>
+
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2PkMRtZ717iuBTiFRbZUi0?utm_source=generator" 
+        width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+        loading="lazy"></iframe>
+        
         <nav aria-label="Page navigation example">
           <ul class="pagination">
             <li class="page-item"><a class="page-link" href="page03.html">Previous</a></li>
@@ -284,7 +295,6 @@
             <li class="page-item"><a class="page-link" href="page05.html">Next</a></li>
          </ul>
         </nav>
-        <div class="footer">Footnote</div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
