--- a/page05.html
+++ b/page05.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Final-05</title>
+    <title>The Beauty of One Hundred and One Dalmatians and Classic Disney Films</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,13 +71,27 @@
           font-family: 'Newsreader', Arial, Helvetica, sans-serif;
           text-align: center;
       }
-      textarea {
+      .text-box {
         color: #000000;
-        font-size: 16px;
+        font-size: 20px;
         font-family: 'Newsreader', Arial, Helvetica, sans-serif;
+        text-align: left;
+        text-indent: 2px;
+        line-height: 1.5;
+        word-wrap: break-word;
+        overflow-x: scroll;
+        overflow-y: scroll;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        border-width:1px;
+        padding-top: 10px;
+        padding-left:5px;
+        padding-bottom:10px;
+        box-sizing: border-box;
+        resize: none;
         width: 100%;
         max-width: 600px;
-        height: 200px;
+        height: 300px;
         margin: 0 auto;
         margin-top: 20px;
         margin-bottom: 20px;
@@ -86,23 +100,7 @@
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         background-color: #ffffff;
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
       }
-      .footer{ 
-       position: relative;     
-       text-align: center;
-       text-box: center;
-       font-size: 20px;
-       font-family: 'Newsreader', Arial, Helvetica, sans-serif;
-       color: #ffffff;
-       padding: 10px;
-       left: 0px;
-       right: 0px;   
-       bottom: 0px; 
-       width: 100%;
-      }  
       .illustration {
        max-width: 60%;
        max-height: var(--image-max-width);
@@ -201,6 +199,21 @@
         display: block;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
+      .gif-container {
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            display: flex;
+        }
+
+        .gif-container img {
+            height: 200%;
+            width: 300%; /* Adjust this percentage to change the size of the GIF */
+            max-height: 450px;
+            max-width: 350px; /* Ensure the GIF doesn't get too large */
+            display: block;
+            margin: 0 auto;
+        }
       .scaleA {
         width: 100%;
         max-width: max-content;
@@ -219,7 +232,7 @@
       }
       .pagination {
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 120px;
       }
       .pagination .page-item .page-link {
         color: #000;
@@ -262,18 +275,25 @@
         <div class="strokeme">
         <p class="title">One Hundred and One Dalmatians</p>
      </div>
+  </div>
+
+      <div class="gif-container">
+    <img src="assets/img/dalmatians-pongo-play.gif" alt="Pongo GIF">
     </div>
-         <p class="center-italic">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p> 
-          <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <p class="different"><strong>Roger:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-          <p class="different"><strong>Pongo:</strong> Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-           
-         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2PkMRtZ717iuBTiFRbZUi0?utm_source=generator" 
+         <p class="center-italic">Pongo messes around with Roger.</p> 
+         <div class="text-box">This scene adds charm and humor to the characters and the story. Pongo setting Roger up on a date
+          is hilarious as he attempts to get Roger and Anita to notice each other. After they fall in the lake and Roger offers
+          Anita his wet hankerchief, the two share a laugh over their situation. The scene is a great example of how the film uses humor to
+          develop the characters and their relationships.
+        <p>The writing is simple for the characters, but the execution is done well with humor that isn't soaked with modern irony. Disney's modern
+          animated films have a tendency to be overly ironic and self-aware, which can detract from the emotional impact of the story. In contrast, One Hundred and One Dalmatians
+          is sincere with its humor and storytelling without sacrifcing the emotional depth of the characters.
+        </p>
+        </div>
+
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2PkMRtZ717iuBTiFRbZUi0?utm_source=generator" 
           width="15%" height="142" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
           loading="lazy"></iframe>
-       
-       <a href="page03.html" class="btn">Continue</a>
-            <a href="index.html" class="btn">Back</a>
    
         <nav aria-label="Page navigation example">
           <ul class="pagination">
@@ -284,7 +304,6 @@
             <li class="page-item"><a class="page-link" href="page06.html">Next</a></li>
          </ul>
         </nav>
-        <div class="footer">Footnote</div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
